--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
 <body>
     <h1>Hallo Welt</h1>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam aut officiis architecto obcaecati velit modi minus quod odio consequatur praesentium? Possimus provident quia exercitationem ipsum magnam ea dolorum fugit. Aliquam!</p>
 
-    <button>Action!</button> das hier ist ein <a href="#">Link</a>
+    <div class="card">
+        <div class="card-body">
+            This is some text within a card body.
+        </div>
+    </div>
+
+    <button class="btn btn-primary">Action!</button> das hier ist ein <a href="#">Link</a>
 </body>
 
 </html>
