--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                        <b>1</b> von <b id="all-questions">5</b> Fragen 
                     </span>
 
-                    <button class="btn btn-secondary" id="next-button" disabled>Nächste Frage</button>
+                    <button onclick="nextQuestion()" class="btn btn-secondary" id="next-button" disabled>Nächste Frage</button>
                 </div>
 
             </div>
