added 50% from new design

--- a/index.html
+++ b/index.html
@@ -54,7 +54,22 @@
 
                 <!-- ############################################################################################## ENDSCREEN ####################################################################################################################### -->
                 <div class="card-body" id="end-screen" style="">
-                    <div class="text-center">
+                    <img src="QuizappImg/brain result.png">
+                    <div>
+                        <span>COMPLETE</span><br>
+                        <span>HTML QUIZ</span>
+                    </div>
+
+
+
+
+
+
+
+
+
+
+                    <!-- <div class="text-center">
                         Quiz beendet!
                     </div>
 
@@ -64,7 +79,7 @@
 
                     <div class="button-row">
                         <button onclick="restartGame()" class="btn btn-secondary" id="">Erneut spielen</button>
-                    </div>
+                    </div> -->
                 </div>
 
                 <!-- ############################################################################################ QUIZZAPP FRAGE SCREEN #################################################################################################################### -->
