--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="card" style="flex-direction: unset;">
 
             <div class="">
-                <div class="left-bar-card">
+                <div class="left-bar-card rubik">
                     <img src="QuizappImg/logo.png">
 
                     <div class="leftbar-span" style="border-left: 8px solid; color: white !important;">HTML</div>
@@ -35,10 +35,10 @@
                 </div>
             </div>
 
-            <div class="card start-container" style="display: none;">
+            <div class="card start-container pt-sans" style="display: none;">
                 <div class="title-span-start text-center">
-                    <span>Welcome to <br>
-                    The Awesome HTML Quiz
+                    <span><b>Welcome to</b> <br>
+                    <b>The Awesome HTML Quiz</b>
                     </span> <br>
                     <span style="font-size: 20px;">Ready for the Challenge?</span>
                 </div>
@@ -53,12 +53,15 @@
 
 
                 <!-- ############################################################################################## ENDSCREEN ####################################################################################################################### -->
-                <div class="card-body" id="end-screen" style="">
+                <div class="card-body endscreen-card rubik" id="end-screen" style="">
                     <img src="QuizappImg/brain result.png">
                     <div>
-                        <span>COMPLETE</span><br>
-                        <span>HTML QUIZ</span>
+                        <span><b>COMPLETE</b></span><br>
+                        <span><b>HTML QUIZ</b></span>
                     </div>
+                    <span style="margin: 24px 0 24px 0;"><b style="color: rgb(255, 187, 41);">YOUR SCORE</b> <b>xxx</b><b>/</b><b>xxx</b></span>
+                    <button class="btn btn-primary btn-share">SHARE</button>
+                    <button class="btn btn-replay">REPLAY</button>
 
 
 
@@ -83,7 +86,7 @@
                 </div>
 
                 <!-- ############################################################################################ QUIZZAPP FRAGE SCREEN #################################################################################################################### -->
-                <div class="card-body card-body-new-design" id="question-body" style="display: none;">
+                <div class="card-body card-body-new-design rubik" id="question-body" style="display: none;">
                     <h5 class="card-title text-center margin-b-32" id="question-text">Frage</h5>
 
                     <div class="card quiz-answer-card mb-2" onclick="answer('answer_1')">
