added trophy img in the endscreen

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </div>
                 </div>
 
-                <div id="quiz-card-display" class="card quiz-card " style="display: none; ">
+                <div id="quiz-card-display" class="card quiz-card" style="display: none;">
                     <!-- ############################################################################################## ENDSCREEN ####################################################################################################################### -->
                     <div class="card-body endscreen-card rubik" id="end-screen" style="display: none;">
                         <img src="QuizappImg/brain result.png">
@@ -121,7 +121,7 @@
 
             </div>
 
-
+            <img id="trophy-img" class="trophy-img" src="QuizappImg/tropy.png" style="display: none;">
 
 
         </div>
